fix z-index ordering in main menu

--- a/src/module/mainmenu/template/appProfilePanel.css
+++ b/src/module/mainmenu/template/appProfilePanel.css
@@ -1,7 +1,9 @@
 .file-graph-panel
 {
+  position: relative;
   float: right;
   padding: 5px 5px;
+  z-index: 2;
 }
 .file-graph-panel .Basis-Button
 {
