--- a/src/module/mainmenu/template/tabs.css
+++ b/src/module/mainmenu/template/tabs.css
@@ -5,7 +5,7 @@
   z-index: 1;
 
   background: #F0F0F0;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .35);
+  box-shadow: 0 0 5px rgba(0, 0, 0, .5);
 
     -webkit-user-select: none;
   user-select: none;
